--- a/.github/workflows/manage-pr-reviewers.yml
+++ b/.github/workflows/manage-pr-reviewers.yml
@@ -14,23 +14,19 @@ jobs:
     
     steps:
       
-      - name: Extract branch name
-        run: |
-              echo "PR_Branch_Name=${{ github.head_ref }}" >> $GITHUB_ENV  
-              echo 'Event name:' ${{ github.event_name }}
-      
       - name: Extract Jira Issue Key
         run:  |
                 echo PR Numer is: $GITHUB_PR_NUMBER
                 
                 restApiPRTitle=$(curl \
                                       -H "Accept: application/vnd.github.v3+json" \
+                                      -H 'authorization: token ${{ secrets.TOKEN_GITHUB }}' \
                                       https://api.github.com/repos/naregkar/$GITHUB_REPOSITORY_NAME/pulls/$GITHUB_PR_NUMBER | jq  -r '.title')
                 
                 echo 'Entered title is:' $restApiPRTitle
                 
                 if [[ $restApiPRTitle =~ ^\[DT-[0-9]+\] ]]; then
-                  #if the title matches the pattern
+                  #if the title matches the required pattern
                   
                   jira_IdUnparsed=$restApiPRTitle
                   jira_id=${jira_IdUnparsed%]*}
@@ -38,7 +34,7 @@ jobs:
                   echo "JiraId=$jira_id" >> $GITHUB_ENV
                   
                 else
-                  echo 'PR Title does not comply with the required pattern.'                  
+                  echo 'PR Title does not comply with the required pattern - [PW-xxxx]'                  
                   exit 1
                 fi
       
@@ -52,7 +48,7 @@ jobs:
               jira_Issue_Status=$(echo $restApiGETJiraIssueDetails | jq -r '.fields.status.name')
               
               if [[ ${jira_Issue_Status} != "Code Review" ]]; then
-                echo 'The Jira Issue status is' $jira_Issue_Status ', not Code Review. Cannot proceed.'
+                echo 'The Jira Issue status is $jira_Issue_Status for ${{ env.JiraId }}. Cannot proceed when the status is not set to Code Review.'
                 exit 1
               fi                         
       
@@ -61,6 +57,7 @@ jobs:
                 
                 restApiGETGitHubReviewersDetails=$(curl \
                             -H "Accept: application/vnd.github.v3+json" \
+                            -H 'authorization: token ${{ secrets.TOKEN_GITHUB }}' \
                             https://api.github.com/repos/naregkar/$GITHUB_REPOSITORY_NAME/pulls/$GITHUB_PR_NUMBER/reviews);
                   
                 approverCount=$(echo $restApiGETGitHubReviewersDetails | jq 'group_by(.user.login) | map(select(max_by(.submitted_at) .state == "APPROVED")) | length')
