--- a/.github/workflows/manage-pr-reviewers.yml
+++ b/.github/workflows/manage-pr-reviewers.yml
@@ -1,9 +1,10 @@
 name: ManagePRReviewers
 
 on:
+  pull_request:
+    types: [edited]
   pull_request_review:
-    types:
-      - 'submitted'
+    types: [submitted]
 env:
   GITHUB_PR_NUMBER: ${{ github.event.pull_request.number }}
   GITHUB_REPOSITORY_NAME: ${{ github.event.repository.name }}
