--- a/.github/workflows/manage-pr-reviewers.yml
+++ b/.github/workflows/manage-pr-reviewers.yml
@@ -3,8 +3,12 @@ name: ManagePRReviewers
 on:
   pull_request:
     types: [edited]
+    branches:
+    - master
   pull_request_review:
     types: [submitted]
+    branches:
+    - master
 env:
   GITHUB_PR_NUMBER: ${{ github.event.pull_request.number }}
   GITHUB_REPOSITORY_NAME: ${{ github.event.repository.name }}
