--- a/.github/workflows/manage-pr-reviewers.yml
+++ b/.github/workflows/manage-pr-reviewers.yml
@@ -2,7 +2,7 @@ name: ManagePRReviewers
 
 on:
   pull_request:
-    #types: [edited]
+    types: [edited]
     branches:
     - master
   pull_request_review:
