--- a/.github/workflows/manage-pr-reviewers.yml
+++ b/.github/workflows/manage-pr-reviewers.yml
@@ -5,10 +5,14 @@ on:
     types: [edited]
     branches:
     - master
+    - release
+    - live
   pull_request_review:
     types: [submitted]
     branches:
     - master
+    - release
+    - live
 env:
   GITHUB_PR_NUMBER: ${{ github.event.pull_request.number }}
   GITHUB_REPOSITORY_NAME: ${{ github.event.repository.name }}
