--- a/.github/workflows/manage-pr-reviewers.yml
+++ b/.github/workflows/manage-pr-reviewers.yml
@@ -52,6 +52,10 @@ jobs:
                   
               jira_Issue_Status=$(echo $restApiGETJiraIssueDetails | jq -r '.fields.status.name')
               
+              jira_Issue_Type=$(echo $restApiGETJiraIssueDetails | jq -r '.fields.issuetype.name')
+              echo "JiraIssueType=$jira_Issue_Type" >> $GITHUB_ENV
+
+              
               if [[ ${jira_Issue_Status} != "Code Review" ]]; then
                 echo 'The Jira status is' $jira_Issue_Status 'for Issue: ${{ env.JiraId }}. Cannot proceed when the status is not set to Code Review.'
                 exit 1
