--- a/.github/workflows/manage-pr-reviewers.yml
+++ b/.github/workflows/manage-pr-reviewers.yml
@@ -2,9 +2,9 @@ name: Manage PR Code Reviewers
 
 on:
   pull_request:
-    types: [edited]
-    branches:
-    - master
+    #types: [edited]
+    #branches:
+    #- master
   pull_request_review:
     types: [submitted]
     branches:
@@ -73,7 +73,7 @@ jobs:
                 
                 echo 'Number of approved reviewers:' $approverCount
                 
-                if [[ "$approverCount" -lt 2 ]]; then
+                if [[ "$approverCount" -lt 1 ]]; then
                     echo 'More reviewers are needed in order for this Jira item to progress within its workflow.'
                     exit 1
                 else
