--- a/.github/workflows/validate-title.yml
+++ b/.github/workflows/validate-title.yml
@@ -13,6 +13,7 @@ jobs:
     steps:
       
       - name: Extract Jira Issue Key
+        if: github.event.pull_request.draft == false
         run:  |
                 echo PR Numer is: $GITHUB_PR_NUMBER
                 
