--- a/.github/workflows/draft-to-pr-check.yml
+++ b/.github/workflows/draft-to-pr-check.yml
@@ -2,7 +2,7 @@ name: Draft to PR Title Validation
 
 on:
   pull_request:
-    [ready_for_review]
+    types: [ready_for_review]
 env:
   GITHUB_PR_NUMBER: ${{ github.event.pull_request.number }}
   GITHUB_REPOSITORY_NAME: ${{ github.event.repository.name }}
