--- a/.github/workflows/draft-to-pr-check.yml
+++ b/.github/workflows/draft-to-pr-check.yml
@@ -3,6 +3,10 @@ name: Draft to PR Title Validation
 on:
   pull_request:
     types: [ready_for_review]
+    branches:
+    - master
+    - release
+    - live
 env:
   GITHUB_PR_NUMBER: ${{ github.event.pull_request.number }}
   GITHUB_REPOSITORY_NAME: ${{ github.event.repository.name }}
@@ -42,6 +46,4 @@ jobs:
                         -H 'authorization: token ${{ secrets.TOKEN_GITHUB }}' \
                         https://api.github.com/repos/naregkar/$GITHUB_REPOSITORY_NAME/pulls/$GITHUB_PR_NUMBER \
                         -d '{"state": "closed"}'
-                  
-                  #exit 1
                 fi
