--- a/.github/workflows/validate-title.yml
+++ b/.github/workflows/validate-title.yml
@@ -2,6 +2,10 @@ name: Validate PR Title
 
 on:
   pull_request:
+    branches:
+      - master
+      - release
+      - live
 env:
   GITHUB_PR_NUMBER: ${{ github.event.pull_request.number }}
   GITHUB_REPOSITORY_NAME: ${{ github.event.repository.name }}
