--- a/.github/workflows/validate-title.yml
+++ b/.github/workflows/validate-title.yml
@@ -2,6 +2,7 @@ name: Validate PR Title
 
 on:
   pull_request:
+    types: [opened, edited, reopened, synchronize]
     branches:
     - master
     - release
