--- a/.github/workflows/video-automation.yml
+++ b/.github/workflows/video-automation.yml
@@ -21,4 +21,5 @@ jobs:
         run: |
               echo 'base ref: ' ${{ github.base_ref }}
               echo 'master to be merged'
+              echo 'headsha: ' ${{ github.event.pull_request.head.sha }}
                 
