--- a/.github/workflows/video-automation.yml
+++ b/.github/workflows/video-automation.yml
@@ -15,8 +15,19 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
+    
+      - name: Extract branch name
+        shell: bash
+        run: echo "BRANCH_NAME=$(echo ${GITHUB_REF#refs/heads/} | awk '{print tolower($0)}'| sed -E -e 's/\.|_|\//-/g')" >> $GITHUB_ENV; echo "SHA8=$(echo ${GITHUB_SHA::8})" >> $GITHUB_ENV
       
-      - name: branch name
+      - name: Extract pull request's head branch
+        if: github.event_name == 'pull_request'
+        run: echo "BRANCH_NAME=$(echo ${GITHUB_HEAD_REF#refs/heads/} | awk '{print tolower($0)}'| sed -E -e 's/\.|_|\//-/g')" >> $GITHUB_ENV; echo "SHA8=$(echo ${GITHUB_SHA::8})" >> $GITHUB_ENV
+      
+      - name: Test
+        run: echo "${BRANCH_NAME}"
+      
+      - name: some echoes
         run: |
               echo 'base ref: ' ${{ github.base_ref }}
               echo 'master to be merged'
