--- a/.github/workflows/video-automation.yml
+++ b/.github/workflows/video-automation.yml
@@ -32,6 +32,7 @@ jobs:
               echo 'base ref: ' ${{ github.base_ref }}
               echo 'master to be merged'
               echo 'headsha: ' ${{ github.event.pull_request.head.sha }}
+              echo 'repo: ' ${GITHUB_REPOSITORY}
               
               if [[ ${{ github.base_ref }} == 'master' ]]; then
                 echo 'inside iffff'
