--- a/.github/workflows/video-automation.yml
+++ b/.github/workflows/video-automation.yml
@@ -36,5 +36,10 @@ jobs:
               
               if [[ ${{ github.base_ref }} == 'master' ]]; then
                 echo 'inside iffff'
+                
+                if [[ 1 == 1 ]]; then
+                  echo 'hey'
+                fi
+                
               fi
                 
