--- a/.github/workflows/validate-title.yml
+++ b/.github/workflows/validate-title.yml
@@ -2,7 +2,7 @@ name: Validate PR Title
 
 on:
   pull_request:
-    types: [opened, edited, reopened, ready_for_review]
+    types: [opened, edited, reopened, ready_for_review, synchronize]
     branches:
     - master
     - release
