--- a/.github/workflows/manage-pr-reviewers.yml
+++ b/.github/workflows/manage-pr-reviewers.yml
@@ -94,5 +94,5 @@ jobs:
                 
                 
       - name: Jenkins Job
-        if: ${{ github.base_ref == 'master' && evn.CodeReviewDone == 'true' }}
+        if: ${{ github.base_ref == 'master' && env.CodeReviewDone == 'true' }}
         run: echo 'heyyyyyy'
