--- a/.github/workflows/manage-pr-reviewers.yml
+++ b/.github/workflows/manage-pr-reviewers.yml
@@ -74,6 +74,7 @@ jobs:
                     echo 'Minimum number of code reviewers passed. Change assignee and status.'
                     
                     echo "CodeReviewDone=true" >> "$GITHUB_ENV"
+                    echo 'env code is: ' env.CodeReviewDone
                     
                     #assign Jira Issue to a certain person/unassign depends on the team
                     curl --request PUT \
