--- a/.github/workflows/manage-pr-reviewers.yml
+++ b/.github/workflows/manage-pr-reviewers.yml
@@ -90,6 +90,8 @@ jobs:
                       -X POST --data '{"transition":{"id":"61"}}' \
                       -H "Content-Type: application/json" https://naregkar.atlassian.net/rest/api/3/issue/${{ env.JiraId }}/transitions
          
+                    echo 'code review done: ' ${{ env.CodeReviewDone }}
+                
                 fi
                 
                 
