--- a/.github/workflows/manage-pr-reviewers.yml
+++ b/.github/workflows/manage-pr-reviewers.yml
@@ -96,5 +96,7 @@ jobs:
                 
                 
       - name: Jenkins Job
-        if: ${{ github.base_ref == 'master' && env.CodeReviewDone == 'true' }}
-        run: echo 'heyyyyyy'
+        #if: ${{ github.base_ref == 'master' && env.CodeReviewDone == 'true' }}
+        run: |
+                echo 'heyyyyyy'
+                echo 'env: ' ${{ env.CodeReviewDone }}
