--- a/.github/workflows/manage-pr-reviewers.yml
+++ b/.github/workflows/manage-pr-reviewers.yml
@@ -96,7 +96,8 @@ jobs:
                 
                 
       - name: Jenkins Job
-        #if: ${{ github.base_ref == 'master' && env.CodeReviewDone == 'true' }}
+        if: |
+             github.base_ref == 'master' && env.CodeReviewDone == 'true'
         run: |
                 echo 'heyyyyyy'
                 echo 'env: ' ${{ env.CodeReviewDone }}
