--- a/.github/workflows/manage-pr-reviewers.yml
+++ b/.github/workflows/manage-pr-reviewers.yml
@@ -67,6 +67,9 @@ jobs:
                 
                 echo 'Number of approved reviewers:' $approverCount
                 
+                targetBranch=${{ github.base_ref }}
+                echo 'targetBranch is: ' $targetBranch
+                
                 if [[ "$approverCount" -lt 2 ]]; then
                     echo 'More reviewers are needed in order for this Jira item to progress within its workflow.'
                     exit 1
