--- a/.github/workflows/manage-pr-reviewers.yml
+++ b/.github/workflows/manage-pr-reviewers.yml
@@ -65,6 +65,9 @@ jobs:
                   
                 approverCount=$(echo $restApiGETGitHubReviewersDetails | jq 'group_by(.user.login) | map(select(max_by(.submitted_at) .state == "APPROVED")) | length')
                 
+                targetBranch=${{ github.base_ref }}
+                echo 'targetBranch is: ' $targetBranch
+                
                 echo 'Number of approved reviewers:' $approverCount
                 
                 if [[ "$approverCount" -lt 1 ]]; then
