--- a/.github/workflows/manage-pr-reviewers.yml
+++ b/.github/workflows/manage-pr-reviewers.yml
@@ -37,6 +37,10 @@ jobs:
                   exit 1
                 fi
       
+      - name: Set env.BRANCH
+        run: echo "TargetBranch=${{ github.base_ref }}" >> $GITHUB_ENV
+      
+      
       - name: Check if Jira issue Status is 'Code Review'
         run: |
               restApiGETJiraIssueDetails=$(curl --request GET \
@@ -65,8 +69,8 @@ jobs:
                   
                 approverCount=$(echo $restApiGETGitHubReviewersDetails | jq 'group_by(.user.login) | map(select(max_by(.submitted_at) .state == "APPROVED")) | length')
                 
-                targetBranch=${{ github.base_ref }}
-                echo 'targetBranch is: ' $targetBranch
+                
+                echo 'targetBranch is: ' $env.TargetBranch
                 
                 echo 'Number of approved reviewers:' $approverCount
 
