--- a/.github/workflows/manage-pr-reviewers.yml
+++ b/.github/workflows/manage-pr-reviewers.yml
@@ -36,11 +36,9 @@ jobs:
                   echo 'PR Title does not comply with the required pattern - [PW-xxxx]'                  
                   exit 1
                 fi
-      
-      - name: Set env.BRANCH
-        run: echo "TargetBranch=${{ github.base_ref }}" >> $GITHUB_ENV
-      
-      
+                
+                echo ${{ github.base_ref }}
+         
       - name: Check if Jira issue Status is 'Code Review'
         run: |
               restApiGETJiraIssueDetails=$(curl --request GET \
