--- a/.github/workflows/manage-pr-reviewers.yml
+++ b/.github/workflows/manage-pr-reviewers.yml
@@ -17,7 +17,7 @@ jobs:
         run:  |
                 echo PR Numer is: $GITHUB_PR_NUMBER
                 
-                echo 'aaaa' ${{ github.base_ref }}
+                echo 'aaaa' ${{ github.event.pull_request.base.ref }}
                 
                 restApiPRTitle=$(curl \
                                       -H "Accept: application/vnd.github.v3+json" \
