--- a/.github/workflows/manage-pr-reviewers.yml
+++ b/.github/workflows/manage-pr-reviewers.yml
@@ -99,7 +99,7 @@ jobs:
                   github.event.pull_request.base.ref == 'master' && env.CodeReviewDone == 'true'
                }}    
         run: |
-                echo 'heyyyyyy'
+                echo ${{ github.event.pull_request.base.ref }}
                 
                 if [[ ${{ github.event.pull_request.base.ref }} == 'master' ]]; then
                   echo 'inside if'
