--- a/.github/workflows/validate-title.yml
+++ b/.github/workflows/validate-title.yml
@@ -41,16 +41,24 @@ jobs:
                   
                 else
                 
-                  if [[ ${{ github.event.pull_request.user.login }} != ${{ secrets.RM_USERNAME }} ]]; then
-                    #PR title is in the wrong format, the PR (if not draft) shall be closed
-                    echo 'PR Title does not comply with the required pattern - [PW-xxxx]'
+                  #if [[ ${{ github.event.pull_request.user.login }} != ${{ secrets.RM_USERNAME }} ]]; then
+                    
+                  contentMaster=$(curl \
+		                                -H "Accept: application/vnd.github.v3+json" \
+		                                https://api.github.com/repos/naregkar/devAutoMerge/contents/.github/ADMIN | jq -r '.content')
+                                    
+                  echo "MasterVersion=$(echo $contentMaster | base64 -d)" >> $GITHUB_ENV   
+   
                   
-                    curl \
+                  #PR title is in the wrong format, the PR (if not draft) shall be closed
+                  echo 'PR Title does not comply with the required pattern - [PW-xxxx]'
+                  
+                  curl \
                           -X PATCH \
                           -H "Accept: application/vnd.github.v3+json" \
                           -H 'authorization: token ${{ secrets.TOKEN_GITHUB }}' \
                           https://api.github.com/repos/naregkar/$GITHUB_REPOSITORY_NAME/pulls/$GITHUB_PR_NUMBER \
                           -d '{"state": "closed"}'
-                  fi
+                  #fi
                   
                 fi
