--- a/.github/workflows/validate-title.yml
+++ b/.github/workflows/validate-title.yml
@@ -40,10 +40,11 @@ jobs:
                   echo "JiraId=$jira_id" >> $GITHUB_ENV
                   
                 else
-                  contentMaster=$(curl \
-		  		-H "Accept: application/vnd.github.v3+json" \
-				https://api.github.com/repos/naregkar/devAutoMerge/contents/.github/ADMIN | jq -r '.content')
-
-                  echo "MasterVersion=$(echo $contentMaster | base64 -d)" >> $GITHUB_ENV   
+                  restApiPRTitle=$(curl \
+		  -H "Accept: application/vnd.github.v3+json" \
+		  -H 'authorization: token ${{ secrets.TOKEN_GITHUB }}' \
+		  https://api.github.com/repos/naregkar/$GITHUB_REPOSITORY_NAME/pulls/$GITHUB_PR_NUMBER | jq  -r '.title)
+		  
+                  echo 'Entered title is:' $restApiPRTitle
 
                 fi
