--- a/.github/workflows/validate-title.yml
+++ b/.github/workflows/validate-title.yml
@@ -40,11 +40,20 @@ jobs:
                   echo "JiraId=$jira_id" >> $GITHUB_ENV
                   
                 else
-                  restApiPRTitle=$(curl \
-		  -H "Accept: application/vnd.github.v3+json" \
-		  -H 'authorization: token ${{ secrets.TOKEN_GITHUB }}' \
-		  https://api.github.com/repos/naregkar/$GITHUB_REPOSITORY_NAME/pulls/$GITHUB_PR_NUMBER | jq  -r '.title)
-		  
-                  echo 'Entered title is:' $restApiPRTitle
+		
+		  if [[ ${{ github.event.pull_request.user.login }} != ${{ secrets.RM_USERNAME }} ]]; then
+		  fi
 
+   
                 fi
+		
+		
+		
+      - name: Read the version file from the master branch
+        if: github.event_name == 'pull_request'
+        run : |
+               contentAdmins=$(curl \
+                               -H "Accept: application/vnd.github.v3+json" \
+                               https://api.github.com/repos/naregkar/$GITHUB_REPOSITORY_NAME/contents/.github/ADMINS | jq -r '.content')
+                                       
+               echo "ListOfAdmins=$(echo $contentAdmins | base64 -d)" >> $GITHUB_ENV		
