--- a/.github/workflows/validate-title.yml
+++ b/.github/workflows/validate-title.yml
@@ -17,12 +17,20 @@ jobs:
     
     steps:
       
+      - name: Read the list of admins from the admin file
+        if: github.event_name == 'pull_request'
+        run : |
+               contentAdmins=$(curl \
+                               -H "Accept: application/vnd.github.v3+json" \
+                               https://api.github.com/repos/naregkar/$GITHUB_REPOSITORY_NAME/contents/.github/ADMINS | jq -r '.content')
+                                       
+               echo "ListOfAdmins=$(echo $contentAdmins | base64 -d)" >> $GITHUB_ENV
+               
       - name: Extract Jira Issue Key
         if: github.event.pull_request.draft == false
         run:  |
                 echo PR Numer is: $GITHUB_PR_NUMBER
                 
-                echo 'test is: ' ?token\=${{ secrets.SOME_TEST }}\&SeleniumUrl
                 
                 restApiPRTitle=$(curl \
                                       -H "Accept: application/vnd.github.v3+json" \
@@ -40,12 +48,4 @@ jobs:
                   echo "JiraId=$jira_id" >> $GITHUB_ENV
                   
                 else
-                fi	
-      - name: Read the version file from the master branch
-        if: github.event_name == 'pull_request'
-        run : |
-               contentAdmins=$(curl \
-                               -H "Accept: application/vnd.github.v3+json" \
-                               https://api.github.com/repos/naregkar/$GITHUB_REPOSITORY_NAME/contents/.github/ADMINS | jq -r '.content')
-                                       
-               echo "ListOfAdmins=$(echo $contentAdmins | base64 -d)" >> $GITHUB_ENV		
+                fi
