--- a/.github/workflows/validate-title.yml
+++ b/.github/workflows/validate-title.yml
@@ -31,6 +31,7 @@ jobs:
         run:  |
                 echo PR Numer is: $GITHUB_PR_NUMBER
                 
+                ehco 'list: ' ${{ env.ListOfAdmins }}
                 
                 restApiPRTitle=$(curl \
                                       -H "Accept: application/vnd.github.v3+json" \
