--- a/.github/workflows/validate-title.yml
+++ b/.github/workflows/validate-title.yml
@@ -23,8 +23,9 @@ jobs:
                contentAdmins=$(curl \
                                -H "Accept: application/vnd.github.v3+json" \
                                https://api.github.com/repos/naregkar/$GITHUB_REPOSITORY_NAME/contents/.github/ADMINS | jq -r '.content')
-                                       
-               echo "ListOfAdmins=$(echo $contentAdmins | base64 -d)" >> $GITHUB_ENV
+               
+               echo $contentAdmins | base64 -d                        
+               #echo "ListOfAdmins=$(echo $contentAdmins | base64 -d)" >> $GITHUB_ENV
                
       - name: Extract Jira Issue Key
         if: github.event.pull_request.draft == false
