--- a/.github/workflows/validate-title.yml
+++ b/.github/workflows/validate-title.yml
@@ -24,7 +24,10 @@ jobs:
                                -H "Accept: application/vnd.github.v3+json" \
                                https://api.github.com/repos/naregkar/$GITHUB_REPOSITORY_NAME/contents/.github/ADMINS | jq -r '.content')
                
-               echo $contentAdmins | base64 -d                        
+               #echo $contentAdmins | base64 -d
+               arr=($contentAdmins| base64 -d)
+               
+               echo 'arr: ' $arr
                #echo "ListOfAdmins=$(echo $contentAdmins | base64 -d)" >> $GITHUB_ENV
                
       - name: Extract Jira Issue Key
