--- a/.github/workflows/validate-title.yml
+++ b/.github/workflows/validate-title.yml
@@ -24,7 +24,7 @@ jobs:
                                -H "Accept: application/vnd.github.v3+json" \
                                https://api.github.com/repos/naregkar/$GITHUB_REPOSITORY_NAME/contents/.github/ADMINS | jq -r '.content')
                
-               someArray=$contentAdmins | base64 -d
+               someArray=$(echo $contentAdmins | base64 -d)
                
                read -a myarray <<< $someArray
 
