--- a/.github/workflows/validate-title.yml
+++ b/.github/workflows/validate-title.yml
@@ -62,8 +62,27 @@ jobs:
                   echo "JiraId=$jira_id" >> $GITHUB_ENV
                   
                 else
-                  echo 'PR Title does not comply with the required pattern - [PW-xxxx]'
                   
-                  echo 'list:' ${{ env.JiraId }}
+                  contentAdmins=$(curl \
+                               -H "Accept: application/vnd.github.v3+json" \
+                               https://api.github.com/repos/naregkar/$GITHUB_REPOSITORY_NAME/contents/.github/ADMINS | jq -r '.content')
+               
+                  returnText=$(echo $contentAdmins | base64 -d)
+               
+                  read -a arrayAdmins <<< $returnText
+               
+                  if [[ " ${arrayAdmins[*]} " == *" ${{ github.event.pull_request.user.login }} "* ]]; then
+                    echo 'Correct pattern for admins.'
+                  else
+                    #PR title is in the wrong format, the PR (if not draft) shall be closed
+                    echo 'PR Title does not comply with the required pattern - [PW-xxxx]'                  
+                    
+                    curl \
+                          -X PATCH \
+                          -H "Accept: application/vnd.github.v3+json" \
+                          -H 'authorization: token ${{ secrets.ADMIN_TOKEN }}' \
+                          https://api.github.com/repos/naregkar/$GITHUB_REPOSITORY_NAME/pulls/$GITHUB_PR_NUMBER \
+                          -d '{"state": "closed"}'
+                  fi
                   
                 fi
