--- a/.github/workflows/validate-title.yml
+++ b/.github/workflows/validate-title.yml
@@ -3,6 +3,8 @@ name: Validate PR Title
 on:
   pull_request:
     types: [opened, edited, reopened, ready_for_review, synchronize]
+    paths-ignore:
+    - './github/'
     branches:
     - master
     - release
