--- a/.github/workflows/validate-title.yml
+++ b/.github/workflows/validate-title.yml
@@ -4,7 +4,7 @@ on:
   pull_request:
     types: [opened, edited, reopened, ready_for_review, synchronize]
     paths-ignore:
-    - '/.github/'
+    - /.github/
     branches:
     - master
     - release
