--- a/.github/workflows/validate-title.yml
+++ b/.github/workflows/validate-title.yml
@@ -43,7 +43,7 @@ jobs:
                   
                   contentAdmins=$(curl \
                                -H "Accept: application/vnd.github.v3+json" \
-                               https://api.github.com/repos/naregkar/$GITHUB_REPOSITORY_NAME/contents/.github/ADMINS | jq -r '.content')
+                               https://api.github.com/repos/naregkar/$GITHUB_REPOSITORY_NAME/contents/.github/REPO-ADMINS | jq -r '.content')
                
                   returnText=$(echo $contentAdmins | base64 -d)
                
